--- a/silkveil/package.json
+++ b/silkveil/package.json
@@ -6,6 +6,7 @@
 		"semver" : ">= 2.2.1",
 		"moment" : ">= 1.6.2",
 		"should" : ">= 3.3.1",
-		"node-assertthat" : ">= 0.0.8"
+		"node-assertthat" : ">= 0.0.8",
+		"mocha" : ">= 1.18.0"
 	}
 }
